[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
web-sys = { version = "0.3.61", features = ["Event", "Performance"] }
yew = { version = "0.20.0", features = ["csr"] }
pbkdf2 = { version = "0.12.1", features = ["sha2"] }
sha2 = "0.10.6"
hmac = "0.12.1"
bs58 = "0.4.0"
hex = "0.4.3"
secp256k1 = { version = "0.27.0", features = ["global-context"] }
ripemd = "0.1.3"
regex = "1.7.3"
thiserror = "1.0.40"
anyhow = "1.0.70"
gloo-net = "0.2.6"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
js-sys = "0.3.61"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen-futures = "0.4.34"
gloo-dialogs = "0.1.1"
gloo-timers = { version = "0.2.6", features = ["futures"] }
yew-hooks = "0.2.0"
rand = "0.8.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
